@@ -267,6 +267,8 @@ Release 0.21.0 - Unreleased
    HBASE-2335  mapred package docs don't say zookeeper jar is a dependent
    HBASE-2417  HCM.locateRootRegion fails hard on "Connection refused"
    HBASE-2346  Usage of FilterList slows down scans
+   HBASE-2341  ZK settings for initLimit/syncLimit should not have been removed
+               from hbase-default.xml
 
   IMPROVEMENTS
    HBASE-1760  Cleanup TODOs in HTable
